--- a/LoRWatcher/LoRWatcher.csproj
+++ b/LoRWatcher/LoRWatcher.csproj
@@ -3,8 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <ApplicationIcon />
+    <ApplicationIcon>wwwroot\favicon.ico</ApplicationIcon>
     <StartupObject />
+    <Authors>Marcus Smallman</Authors>
+    <PackageIcon>favicon.ico</PackageIcon>
+    <PackageIconUrl />
+    <Version>0.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +19,13 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\favicon.ico">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
