--- a/LoRWatcher/LoRWatcher.csproj
+++ b/LoRWatcher/LoRWatcher.csproj
@@ -10,19 +10,22 @@
     <Authors>Marcus Smallman</Authors>
     <PackageIcon>favicon.ico</PackageIcon>
     <PackageIconUrl />
-    <Version>0.0.3</Version>
+    <Version>0.0.4</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Blazorise.Icons.Material" Version="0.9.0" />
-    <PackageReference Include="Blazorise.Material" Version="0.9.0" />
-    <PackageReference Include="Blazorise.Sidebar" Version="0.9.0" />
-    <PackageReference Include="LiteDB" Version="5.0.0" />
+    <PackageReference Include="Blazorise.Icons.Material" Version="0.9.0.1" />
+    <PackageReference Include="Blazorise.Material" Version="0.9.0.1" />
+    <PackageReference Include="Blazorise.Sidebar" Version="0.9.0.1" />
+    <PackageReference Include="LiteDB" Version="5.0.7" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="LoRDeckCodes">
+      <HintPath>Assemblies\LoRDeckCodes.dll</HintPath>
+    </Reference>
     <Reference Include="System.Drawing.Common">
       <HintPath>Assemblies\System.Drawing.Common.dll</HintPath>
     </Reference>
