Removed console and added file logger

--- a/LoRWatcher/LoRWatcher.csproj
+++ b/LoRWatcher/LoRWatcher.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <PackageId>LoR Watcher</PackageId>
     <AssemblyName>LoR Watcher</AssemblyName>
     <TargetFramework>netcoreapp3.1</TargetFramework>
