--- a/LoRWatcher/appsettings.json
+++ b/LoRWatcher/appsettings.json
@@ -1,10 +1,15 @@
 {
+  "LoggerSettings": {
+    "WriteToFile": true,
+    "FileDirectory": null,
+    "CleanupPeriodMinutes": 4320
+  },
   "Client": {
     "Address": "localhost",
     "Port": 5000
   },
   "LoR": {
-    "Address":  "localhost",
+    "Address": "localhost",
     "Port": 21337
   }
 }
