--- a/LoRWatcher/LoRWatcher.csproj
+++ b/LoRWatcher/LoRWatcher.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <PackageId>LoR Watcher</PackageId>
     <AssemblyName>LoR Watcher</AssemblyName>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -14,11 +14,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Blazorise.Icons.Material" Version="0.9.0.2" />
-    <PackageReference Include="Blazorise.Material" Version="0.9.0.2" />
-    <PackageReference Include="Blazorise.Sidebar" Version="0.9.0.2" />
+    <PackageReference Include="Blazorise.Icons.Material" Version="0.9.0.3" />
+    <PackageReference Include="Blazorise.Material" Version="0.9.0.3" />
+    <PackageReference Include="Blazorise.Sidebar" Version="0.9.0.3" />
+    <PackageReference Include="Blazorise.DataGrid" Version="0.9.0.3" />
+    <PackageReference Include="Blazorise.Charts" Version="0.9.0.3" />
     <PackageReference Include="LiteDB" Version="5.0.7" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
