--- a/LoRWatcher/LoRWatcher.csproj
+++ b/LoRWatcher/LoRWatcher.csproj
@@ -4,7 +4,7 @@
     <OutputType>WinExe</OutputType>
     <PackageId>LoR Watcher</PackageId>
     <AssemblyName>LoR Watcher</AssemblyName>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <ApplicationIcon>wwwroot\favicon.ico</ApplicationIcon>
     <Authors>Marcus Smallman</Authors>
     <PackageIcon>favicon.ico</PackageIcon>
@@ -15,13 +15,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.2" />
-    <PackageReference Include="Blazorise.Material" Version="0.9.2" />
-    <PackageReference Include="Blazorise.Sidebar" Version="0.9.2" />
-    <PackageReference Include="Blazorise.DataGrid" Version="0.9.2" />
-    <PackageReference Include="Blazorise.Charts" Version="0.9.2" />
-    <PackageReference Include="LiteDB" Version="5.0.9" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.10" />
+    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.2.4" />
+    <PackageReference Include="Blazorise.Material" Version="0.9.2.4" />
+    <PackageReference Include="Blazorise.Sidebar" Version="0.9.2.4" />
+    <PackageReference Include="Blazorise.DataGrid" Version="0.9.2.4" />
+    <PackageReference Include="Blazorise.Charts" Version="0.9.2.4" />
+    <PackageReference Include="LiteDB" Version="5.0.10" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
