Watcher now hosted at lor.watcher and installer changes to support this

--- a/LoRWatcher/appsettings.default.json
+++ b/LoRWatcher/appsettings.default.json
@@ -6,8 +6,8 @@
     "CleanupPeriodMinutes": 180
   },
   "Client": {
-    "Address": "127.0.0.1",
-    "Port": 5000
+    "Address": "lor.watcher",
+    "Port": 80
   },
   "LoR": {
     "Address": "127.0.0.1",
