--- a/LoRWatcher/LoRWatcher.csproj
+++ b/LoRWatcher/LoRWatcher.csproj
@@ -10,7 +10,7 @@
 		<PackageIcon>favicon.ico</PackageIcon>
 		<PackageIconUrl />
 		<PlatformTarget>x86</PlatformTarget>
-		<Version>0.1.10</Version>
+		<Version>0.2.0</Version>
 		<UseWindowsForms>true</UseWindowsForms>
 	</PropertyGroup>
 
@@ -21,6 +21,7 @@
 		<PackageReference Include="Blazorise.DataGrid" Version="1.0.6" />
 		<PackageReference Include="Blazorise.Charts" Version="1.0.6" />
 		<PackageReference Include="LiteDB" Version="5.0.12" />
+		<PackageReference Include="Mapster" Version="7.3.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	</ItemGroup>
