--- a/LoRWatcher/appsettings.default.json
+++ b/LoRWatcher/appsettings.default.json
@@ -7,7 +7,8 @@
   },
   "Client": {
     "Address": "lor.watcher",
-    "Port": 80
+    "Port": 80,
+    "StartWithWindows": true
   },
   "LoR": {
     "Address": "127.0.0.1",
